--- a/index.html
+++ b/index.html
@@ -9,24 +9,33 @@
 <body>
 <!-- partial:index.partial.html -->
 <div class="grid">
-  <div class="grid-item item-1 w300">
-    <div class="temp_value">+30.5</div>
-    <div class="temp_info">
-      <div class="temp_icon">icon</div>
-      <div class="temp_feelings">
-        <div class="temp_condition">Пасмурно</div>
-        <div class="temp_fact">
-          <div class="fact_label">Ощущается как </div>
-          <div class="fact_temp">+31</div>
+  <div class="grid-1">
+    <div class="grid-item item-1 w300">
+      <div class="temp_value">+30.5</div>
+      <div class="temp_info">
+        <div class="temp_icon">icon</div>
+        <div class="temp_feelings">
+          <div class="temp_condition">Пасмурно</div>
+          <div class="temp_fact">
+            <div class="fact_label">Ощущается как </div>
+            <div class="fact_temp"> +31</div>
+          </div>
         </div>
       </div>
+      <div class="temp_props">
+        <div class="temp_wind-speed">3.5 м/с, ЮЗ</div>
+        <div class="temp_humidity">45%</div>
+        <div class="temp_pressure">760.2 мм рт. ст.</div>
+      </div>
     </div>
+    <div class="grid-item item-2 w300">Статусы членов семьи</div>
+    <div class="grid-item item-3 w300">Ссылки</div>
   </div>
-  <div class="grid-item item-2 w300">Статусы членов семьи</div>
-  <div class="grid-item item-3 w300">Ссылки</div>
   <div class="grid-item item-4">Комнаты</div>
-  <div class="grid-item item-5">Камера 1</div>
-  <div class="grid-item item-6">Камера 2</div>
+  <div class="grid-3">
+    <div class="grid-item item-5">Камера 1</div>
+    <div class="grid-item item-6">Камера 2</div>
+  </div>
 </div>
 <!-- partial -->
   
