--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="grid-item item-1 w300">
       <div class="temp_value">+30.5</div>
       <div class="temp_info">
-        <div class="temp_icon">icon</div>
+        <iframe src="/src/icons/weather1.svg" class="temp_icon"></iframe>
         <div class="temp_feelings">
           <div class="temp_condition">Пасмурно</div>
           <div class="temp_fact">
@@ -23,9 +23,18 @@
         </div>
       </div>
       <div class="temp_props">
-        <div class="temp_wind-speed">3.5 м/с, ЮЗ</div>
-        <div class="temp_humidity">45%</div>
-        <div class="temp_pressure">760.2 мм рт. ст.</div>
+        <div class="temp_wind-speed">
+          <iframe src="/src/icons/wind-speed.svg" class="temp_wind-speed_icon"></iframe>
+          <span>3.5 м/с, ЮЗ</span>
+        </div>
+        <div class="temp_humidity">
+          <iframe src="/src/icons/humidity.svg" class="temp_humidity_icon"></iframe>
+          <span>45%</span>
+        </div>
+        <div class="temp_pressure">
+          <iframe src="/src/icons/pressure.svg" class="temp_pressure_icon"></iframe>
+          <span>760.2 мм рт. ст.</span>
+        </div>
       </div>
     </div>
     <div class="grid-item item-2 w300">Статусы членов семьи</div>
