--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="grid-item item-1 w300">
       <div class="temp_value">+30.5</div>
       <div class="temp_info">
-        <iframe src="/src/icons/weather1.svg" class="temp_icon"></iframe>
+        <img src="/src/icons/weather1.svg" class="temp_icon"></img>
         <div class="temp_feelings">
           <div class="temp_condition">Пасмурно</div>
           <div class="temp_fact">
@@ -24,15 +24,15 @@
       </div>
       <div class="temp_props">
         <div class="temp_wind-speed">
-          <iframe src="/src/icons/wind-speed.svg" class="temp_wind-speed_icon"></iframe>
+          <img src="/src/icons/wind-speed.svg" class="temp_wind-speed_icon"></img>
           <span>3.5 м/с, ЮЗ</span>
         </div>
         <div class="temp_humidity">
-          <iframe src="/src/icons/humidity.svg" class="temp_humidity_icon"></iframe>
+          <img src="/src/icons/humidity.svg" class="temp_humidity_icon"></img>
           <span>45%</span>
         </div>
         <div class="temp_pressure">
-          <iframe src="/src/icons/pressure.svg" class="temp_pressure_icon"></iframe>
+          <img src="/src/icons/pressure.svg" class="temp_pressure_icon"></img>
           <span>760.2 мм рт. ст.</span>
         </div>
       </div>
