--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
         </div>
       </div>
       <div class="temp_props">
-        <div class="temp_wind-speed">
+        <div class="temp_prop temp_wind-speed">
           <img src="/src/icons/wind-speed.svg" class="temp_wind-speed_icon"></img>
           <span>3.5 м/с, ЮЗ</span>
         </div>
-        <div class="temp_humidity">
+        <div class="temp_prop temp_humidity">
           <img src="/src/icons/humidity.svg" class="temp_humidity_icon"></img>
           <span>45%</span>
         </div>
-        <div class="temp_pressure">
+        <div class="temp_prop temp_pressure">
           <img src="/src/icons/pressure.svg" class="temp_pressure_icon"></img>
           <span>760.2 мм рт. ст.</span>
         </div>
