--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
 <!-- partial:index.partial.html -->
 <div class="grid">
+
   <div class="grid-1">
+
     <div class="grid-item item-1 w300">
       <div class="temp_value">+30.5</div>
       <div class="temp_info">
@@ -37,8 +39,31 @@
         </div>
       </div>
     </div>
-    <div class="grid-item item-2 w300">Статусы членов семьи</div>
+
+    <div class="grid-item item-2 w300">
+      <div class="grid_header">Статусы членов семьи</div>
+      <div class="family_status">
+        <div class="family_person online">
+          <img src="/src/icons/avatar.svg"></img>
+          <span>Человек 1</span>
+        </div>
+        <div class="family_person offline">
+          <img src="/src/icons/avatar.svg"></img>
+          <span>Человек 2</span>
+        </div>
+        <div class="family_person online">
+          <img src="/src/icons/avatar.svg"></img>
+          <span>Человек 3</span>
+        </div>
+        <div class="family_person online">
+          <img src="/src/icons/avatar.svg"></img>
+          <span>Человек 4</span>
+        </div>
+      </div>
+    </div>
+
     <div class="grid-item item-3 w300">Ссылки</div>
+
   </div>
   <div class="grid-item item-4">Комнаты</div>
   <div class="grid-3">
