--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Bento grid</title>
+  <title>Умный дом</title>
   <link rel="stylesheet" href="/src/style.css">
 
 </head>
