--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <img src="/src/icons/qa.svg"></img>
   </a>
    <div class="time">
-    <span>Чт, 27 июля <b>13:10</b></span>
+    <span> <b></b></span>
    </div>
   </div>
  </div>
@@ -130,10 +130,10 @@
         <div class="room_device conditioner device_off">
           <div class="device_value">
             <img src="/src/icons/mdi_temperature.svg"></img>
-            <input type="text">
+            <a class="device_temp">28.7</a>
           </div>
+          <div class="toggle"></div>
           <span>Кондиционер</span>
-          <a href="#">ВЫКЛ</a>
         </div>
       </div>
 
@@ -143,8 +143,8 @@
           <div class="device_value">
             <img src="/src/icons/material-symbols_cloud.svg"></img>
           </div>
+          <div class="toggle"></div>
           <span>Вытяжка</span>
-          <a href="#">ВКЛ</a>
         </div>
       </div>
 
@@ -211,7 +211,7 @@
             <input type="text">
           </div>
           <span>Кондиционер</span>
-          <a href="#">ВЫКЛ</a>
+          <div class="toggle"></div>
         </div>
       </div>
 
@@ -280,7 +280,7 @@
             <input type="text">
           </div>
           <span>Кондиционер</span>
-          <a href="#">ВЫКЛ</a>
+          <div class="toggle"></div>
         </div>
       </div>
 
@@ -291,7 +291,7 @@
             <img src="/src/icons/material-symbols_cloud.svg"></img>
           </div>
           <span>Вытяжка</span>
-          <a href="#">ВКЛ</a>
+          <div class="toggle"></div>
         </div>
       </div>
 
@@ -358,7 +358,7 @@
             <input type="text">
           </div>
           <span>Кондиционер</span>
-          <a href="#">ВЫКЛ</a>
+          <div class="toggle"></div>
         </div>
       </div>
 
@@ -369,7 +369,7 @@
             <img src="/src/icons/material-symbols_cloud.svg"></img>
           </div>
           <span>Вытяжка</span>
-          <a href="#">ВКЛ</a>
+          <div class="toggle"></div>
         </div>
       </div>
 
@@ -436,7 +436,7 @@
             <input type="text">
           </div>
           <span>Кондиционер</span>
-          <a href="#">ВЫКЛ</a>
+          <div class="toggle"></div>
         </div>
       </div>
 
@@ -447,7 +447,7 @@
             <img src="/src/icons/material-symbols_cloud.svg"></img>
           </div>
           <span>Вытяжка</span>
-          <a href="#">ВКЛ</a>
+          <div class="toggle"></div>
         </div>
       </div>
 
@@ -501,7 +501,8 @@
   </div>
 </div>
 <!-- partial -->
-<script src="/src/script.js" type="js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+<script src="/src/script.js" type="text/javascript"></script>
+<script src="/src/date.js" type="text/javascript"></script>
 </body>
 </html>
