--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Умный дом</title>
   <link rel="stylesheet" href="/src/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/roundSlider/1.3.2/roundslider.css" />
 
 </head>
 
 <div class="header">
   
   <div class="header-menu">
-   <a class="menu-link is-active" href="#">Главная страница</a>
-   <a class="menu-link " href="#">Комната 1</a>
+   <a class="menu-link is-active" href="index.html">Главная страница</a>
+   <a class="menu-link " href="room1.html">Комната 1</a>
    <a class="menu-link" href="#">Комната 2</a>
   </div>
   <div class="search-bar">
@@ -86,15 +88,34 @@
       </div>
     </div>
 
-    <a class="grid-item grid-link" href="#" >
-      <img src="/src/icons/telegram.svg"></img>
-      <span>Telegram-бот</span>
-    </a>
+    <div class="grid_links">
+      <a class="grid-item grid-link" href="#" >
+        <img src="/src/icons/telegram.svg"></img>
+        <span>Telegram-бот</span>
+      </a>
+  
+      <a class="grid-item grid-link" href="#">
+        <img src="/src/icons/camera.svg"></img>
+        <span>Фото посетителей</span>
+      </a>
+    </div>
+  
+  </div>
 
-    <a class="grid-item grid-link" href="#">
-      <img src="/src/icons/camera.svg"></img>
-      <span>Фото посетителей</span>
-    </a>
+  <div class="grid-3 mobile">
+    <div class="grid-item grid_cam cam1">
+      <div class="cam_label">
+        <img src="/src/icons/cam1.svg" alt="">
+        <span>Камера 1</span>
+      </div>
+    </div>
+
+    <div class="grid-item grid_cam cam2">
+      <div class="cam_label">
+        <img src="/src/icons/cam1.svg" alt="">
+        <span>Камера 2</span>
+      </div>
+    </div>
 
   </div>
 
@@ -127,24 +148,43 @@
 
       <div class="room_prop room_temp">
         <span class="room_prop_header">Температура</span>
-        <div class="room_device conditioner device_off">
-          <div class="device_value">
-            <img src="/src/icons/mdi_temperature.svg"></img>
-            <a class="device_temp">28.7</a>
+        <div class="room_devices">
+          <div class="room_device conditioner device_off">
+            <div class="device_value">
+              <img src="/src/icons/mdi_temperature.svg"></img>
+              <a class="device_temp">28.7</a>
+            </div>
+            <div class="toggle desktop"></div>
+            <span>Кондиционер</span>
+            <div class="toggle mobile"></div>
           </div>
-          <div class="toggle"></div>
-          <span>Кондиционер</span>
+          <div class="room_device conditioner device_off">
+            <div class="device_value">
+              <img src="/src/icons/mdi_temperature.svg"></img>
+              <a class="device_temp">28.7</a>
+            </div>
+            <div class="toggle desktop"></div>
+            <span>Кондиционер</span>
+            <div class="toggle mobile"></div>
+            
+            <button id="openBtn" class="cd-popup-trigger">Задать температуру</button>
+            <!-- pop-up -->
+
+          </div>
         </div>
       </div>
 
       <div class="room_prop room_extractor">
         <span class="room_prop_header">Воздух</span>
-        <div class="room_device conditioner device_on">
-          <div class="device_value">
-            <img src="/src/icons/material-symbols_cloud.svg"></img>
+        <div class="room_devices">
+          <div class="room_device conditioner device_on">
+            <div class="device_value">
+              <img src="/src/icons/material-symbols_cloud.svg"></img>
+            </div>
+            <div class="toggle desktop"></div>
+            <span>Вытяжка</span>
+            <div class="toggle mobile"></div>
           </div>
-          <div class="toggle"></div>
-          <span>Вытяжка</span>
         </div>
       </div>
 
@@ -205,13 +245,25 @@
 
       <div class="room_prop room_temp">
         <span class="room_prop_header">Температура</span>
-        <div class="room_device conditioner device_off">
-          <div class="device_value">
-            <img src="/src/icons/mdi_temperature.svg"></img>
-            <input type="text">
+        <div class="room_devices">
+          <div class="room_device conditioner device_off">
+            <div class="device_value">
+              <img src="/src/icons/mdi_temperature.svg"></img>
+              <a class="device_temp">28.7</a>
+            </div>
+            <div class="toggle desktop"></div>
+            <span>Кондиционер</span>
+            <div class="toggle mobile"></div>
           </div>
-          <span>Кондиционер</span>
-          <div class="toggle"></div>
+          <div class="room_device conditioner device_off">
+            <div class="device_value">
+              <img src="/src/icons/mdi_temperature.svg"></img>
+              <a class="device_temp">28.7</a>
+            </div>
+            <div class="toggle desktop"></div>
+            <span>Кондиционер</span>
+            <div class="toggle mobile"></div>
+          </div>
         </div>
       </div>
 
@@ -274,24 +326,39 @@
 
       <div class="room_prop room_temp">
         <span class="room_prop_header">Температура</span>
-        <div class="room_device conditioner device_off">
-          <div class="device_value">
-            <img src="/src/icons/mdi_temperature.svg"></img>
-            <input type="text">
+        <div class="room_devices">
+          <div class="room_device conditioner device_off">
+            <div class="device_value">
+              <img src="/src/icons/mdi_temperature.svg"></img>
+              <a class="device_temp">28.7</a>
+            </div>
+            <div class="toggle desktop"></div>
+            <span>Кондиционер</span>
+            <div class="toggle mobile"></div>
           </div>
-          <span>Кондиционер</span>
-          <div class="toggle"></div>
+          <div class="room_device conditioner device_off">
+            <div class="device_value">
+              <img src="/src/icons/mdi_temperature.svg"></img>
+              <a class="device_temp">28.7</a>
+            </div>
+            <div class="toggle desktop"></div>
+            <span>Кондиционер</span>
+            <div class="toggle mobile"></div>
+          </div>
         </div>
       </div>
 
       <div class="room_prop room_extractor">
         <span class="room_prop_header">Воздух</span>
-        <div class="room_device conditioner device_on">
-          <div class="device_value">
-            <img src="/src/icons/material-symbols_cloud.svg"></img>
+        <div class="room_devices">
+          <div class="room_device conditioner device_on">
+            <div class="device_value">
+              <img src="/src/icons/material-symbols_cloud.svg"></img>
+            </div>
+            <div class="toggle desktop"></div>
+            <span>Вытяжка</span>
+            <div class="toggle mobile"></div>
           </div>
-          <span>Вытяжка</span>
-          <div class="toggle"></div>
         </div>
       </div>
 
@@ -352,24 +419,39 @@
 
       <div class="room_prop room_temp">
         <span class="room_prop_header">Температура</span>
-        <div class="room_device conditioner device_off">
-          <div class="device_value">
-            <img src="/src/icons/mdi_temperature.svg"></img>
-            <input type="text">
+        <div class="room_devices">
+          <div class="room_device conditioner device_off">
+            <div class="device_value">
+              <img src="/src/icons/mdi_temperature.svg"></img>
+              <a class="device_temp">28.7</a>
+            </div>
+            <div class="toggle desktop"></div>
+            <span>Кондиционер</span>
+            <div class="toggle mobile"></div>
           </div>
-          <span>Кондиционер</span>
-          <div class="toggle"></div>
+          <div class="room_device conditioner device_off">
+            <div class="device_value">
+              <img src="/src/icons/mdi_temperature.svg"></img>
+              <a class="device_temp">28.7</a>
+            </div>
+            <div class="toggle desktop"></div>
+            <span>Кондиционер</span>
+            <div class="toggle mobile"></div>
+          </div>
         </div>
       </div>
 
       <div class="room_prop room_extractor">
         <span class="room_prop_header">Воздух</span>
-        <div class="room_device conditioner device_on">
-          <div class="device_value">
-            <img src="/src/icons/material-symbols_cloud.svg"></img>
+        <div class="room_devices">
+          <div class="room_device conditioner device_on">
+            <div class="device_value">
+              <img src="/src/icons/material-symbols_cloud.svg"></img>
+            </div>
+            <div class="toggle desktop"></div>
+            <span>Вытяжка</span>
+            <div class="toggle mobile"></div>
           </div>
-          <span>Вытяжка</span>
-          <div class="toggle"></div>
         </div>
       </div>
 
@@ -430,24 +512,39 @@
 
       <div class="room_prop room_temp">
         <span class="room_prop_header">Температура</span>
-        <div class="room_device conditioner device_off">
-          <div class="device_value">
-            <img src="/src/icons/mdi_temperature.svg"></img>
-            <input type="text">
+        <div class="room_devices">
+          <div class="room_device conditioner device_off">
+            <div class="device_value">
+              <img src="/src/icons/mdi_temperature.svg"></img>
+              <a class="device_temp">28.7</a>
+            </div>
+            <div class="toggle desktop"></div>
+            <span>Кондиционер</span>
+            <div class="toggle mobile"></div>
           </div>
-          <span>Кондиционер</span>
-          <div class="toggle"></div>
+          <div class="room_device conditioner device_off">
+            <div class="device_value">
+              <img src="/src/icons/mdi_temperature.svg"></img>
+              <a class="device_temp">28.7</a>
+            </div>
+            <div class="toggle desktop"></div>
+            <span>Кондиционер</span>
+            <div class="toggle mobile"></div>
+          </div>
         </div>
       </div>
 
       <div class="room_prop room_extractor">
         <span class="room_prop_header">Воздух</span>
-        <div class="room_device conditioner device_on">
-          <div class="device_value">
-            <img src="/src/icons/material-symbols_cloud.svg"></img>
+        <div class="room_devices">
+          <div class="room_device conditioner device_on">
+            <div class="device_value">
+              <img src="/src/icons/material-symbols_cloud.svg"></img>
+            </div>
+            <div class="toggle desktop"></div>
+            <span>Вытяжка</span>
+            <div class="toggle mobile"></div>
           </div>
-          <span>Вытяжка</span>
-          <div class="toggle"></div>
         </div>
       </div>
 
@@ -483,7 +580,7 @@
 
   </div>
 
-  <div class="grid-3">
+  <div class="grid-3 desktop">
     <div class="grid-item grid_cam cam1">
       <div class="cam_label">
         <img src="/src/icons/cam1.svg" alt="">
@@ -499,10 +596,25 @@
     </div>
 
   </div>
+
+  <div class="cd-popup" role="alert">
+    <div class="cd-popup-container">
+      <p>Задайте нужную температуру</p>
+      <input type="range" id="myRange">
+      <ul class="cd-buttons">
+        <li><a href="#0">Применить</a></li>
+      </ul>
+      <a href="#0" class="cd-popup-close img-replace">Закрыть</a>
+    </div> <!-- cd-popup-container -->
+  </div> <!-- cd-popup -->
+
 </div>
 <!-- partial -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/roundSlider/1.3.2/roundslider.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
 <script src="/src/script.js" type="text/javascript"></script>
 <script src="/src/date.js" type="text/javascript"></script>
+<script src="/src/termostat.js" type="text/javascript"></script>
 </body>
 </html>
